Improvements update - more informations.

--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
                                                 My work is a commitment to excellence and a reflection of my life's purpose to leave a 
                                                 lasting impact on the world.</span>
                <div class="cv">
-                <a href="https://www.canva.com/design/DAF01J5Lxfk/3rEyBEcQ8dmcVeyOeY4RFA/edit?utm_content=DAF01J5Lxfk&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank" rel="noopener noreferrer"><button>Download <span class="colors">CV</span></button></a>
+                <a href="images/CV - Carolina Perdigão.pdf" target="_blank" rel="noopener noreferrer"><button>Download <span class="colors">CV</span></button></a>
             </div>
             </div>
             <!--about picture-->
@@ -138,7 +138,7 @@
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                      Javascript
+                      Python
                     </div>
                         </div>
                     <div class="html-prog wow prog">
@@ -148,7 +148,7 @@
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                        Adobe Ps
+                        Power BI
                     </div>
                         </div>
                     <div class="html-prog wow prog">
@@ -158,7 +158,7 @@
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                        PHP
+                        Mathematics
                     </div>
                         </div>
                     <div class="html-prog wow prog">
@@ -168,7 +168,7 @@
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                        JQuery
+                        SQL - (Most used at Snowflake)
                     </div>
                         </div>
                     <div class="html-prog wow prog">
@@ -178,11 +178,11 @@
                     <div class="skill-html skill">
                         <div class="skill-text">
                     <div class="html">
-                        SEO
+                        English
                     </div>
                         </div>
                     <div class="html-prog wow prog">
-                 <div class="seo-progress wow">84%</div>
+                 <div class="seo-progress wow">90%</div>
                     </div>
                     </div>
                 </div>
