--- a/blog.html
+++ b/blog.html
@@ -140,7 +140,7 @@
    <!--copyright-section You Can Remove After Downloading-->
    <div class="footer">
     <div class="footer-text">
-        <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Willy Wonkas
+        <img src="./images/copyright.png" alt="copyright-img" class="images" height="14px"> Carolina Perdigão
     </div>
    </div>
 <!--copyright-section-->
