Updated some details.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <!--Social Media Links-->
             <div class="social-media-links">
                <a href="https://github.com/carolinaperdigao?tab=repositories" target="_blank" rel="noopener noreferrer"><img src="images/github.png" class="social-media" alt="instagram-logo"></a>
-                <a href="https://www.linkedin.com/in/carolina-silvestre-perdig%C3%A3o-3ba762186/" target="_blank" rel="noopener noreferrer"> <img src="images/linkedin logo.png" class="social-media" alt="linkedin-logo"></a>
+                <a href="https://www.linkedin.com/in/carolina-perdig%C3%A3o/" target="_blank" rel="noopener noreferrer"> <img src="images/linkedin logo.png" class="social-media" alt="linkedin-logo"></a>
 
             </div>
             <!--Social Media Links end-->
