--- a/blog.html
+++ b/blog.html
@@ -86,14 +86,14 @@
 
     <!--START OF ARTICLES-->
      <div class="blogs">
-         <a href="#">
+         <a href="images/pdf/V9.pdf" target="_blank" rel="noopener noreferrer">
          <div class="img">
             <img src="images/post-one.jpg" alt="blog-one">
             <div class="blog-date">Soon in ENG</div>
          </div>
          <div class="blog-text">
-             <h3>Your darma</h3>
-             <p>Available soon.</p>
+             <h3>A Guerra Fria da TD</h3>
+             <p>A guerra fria da Transformação Digital (TD): A ascensão da Inteligência Artificial nos territórios em inércia pelo conformismo.</p>
          </div></a>
      </div>      
      <div class="blogs">
