--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 
         <!--CARD BETWEEN DIVS START-->
 
+
         <div class="containercard2">
             <div class="card2">
                 <div class="card-content">
@@ -146,6 +147,66 @@
         
         <!--CARD BETWEEN DIVS END-->
 
+
+        <!--ABOUT ME START-->
+
+        <div class="color-changer">
+            <div class="color-panel">
+                <img src="images/gear.png" alt="">
+            </div>
+            <div class="color-selector">
+                <div class="heading">Custom Colors</div>
+                <div class="colors">
+                    <ul >
+                    <li>
+                        <a href="#0" class="color-red " title="color-red"></a>
+                    </li>
+                    <li>
+                        <a href="#0" class="color-purple" title="color-purple"></a>
+                    </li>
+                    <li>
+                        <a href="#0" class="color-malt" title="color-malt"></a>
+                    </li>
+                    <li>
+                        <a href="#0" class="color-green" title="color-green"></a>
+                    </li>
+                    <li>
+                        <a href="#0" class="color-blue" title="color-blue"></a>
+                    </li>
+                    <li>
+                        <a href="#0" class="color-orange" title="color-orange"></a>
+                    </li>
+                    </ul>
+                </div>
+            </div>
+            </div>
+            <!--about content-->
+            
+                <div class="about-header">
+                    About <span class="color">Me</span>
+                    <span class ="header-caption">Get to Know <span class="color"> me.</span></span>
+                </div>
+                <div class="about-main">
+            <div class="about-first-paragraph wow">
+            <!--about description-->
+               <span class="about-first-line">
+                    I'm 
+                    <span class="color">Carolina.</span>
+                     :) </span>
+                     <br>
+               <span class="about-second-line"> Here you can check a little my profile based on the DISC test, the result is a "Creative Profile", you can check on the PDF my behavior % and graphics related.</span>
+               <div class="cv">
+                <a href="images/pdf/Profile Test PT.pdf" target="_blank" rel="noopener noreferrer"><button>Read PDF: <span class="colors">PT</span></button></a>
+                <a href="images/pdf/Profile Test ENG.pdf" target="_blank" rel="noopener noreferrer"><button>Read PDF: <span class="colors">ENG</span></button></a>
+            </div>
+            </div>
+            <!--about picture-->
+            <div class="about-img">
+                <img src="images/aboutme.png" alt="Your Image">
+            </div>
+            </div>
+
+        <!--ABOUT ME END-->
 
         <!--start of NAV BY-->
 
