--- a/uiux.html
+++ b/uiux.html
@@ -67,11 +67,11 @@
             
           <div class="card">
             <div class="content">
-              <p class="heading">User Experience Research
+              <p class="heading">Digital Transformation Research
               </p><p class="para">
-                This research will be available soon, come back later for the results, thanks for your patience.
+                Here you can read the pre-project of the article I'm working on, named "The cold war of digital transformation: The rise of Artificial Intelligence in territories in inertia due to conformism.".
               </p>
-              <a href="#" target="_blank" rel="noopener noreferrer"><button class="btn">Available soon</button></a>
+              <a href="images/PDF/V9.pdf" target="_blank" rel="noopener noreferrer"><button class="btn">Click here to read in PT-BR.</button></a>
             </div>
           </div>
 
@@ -81,7 +81,7 @@
               </p><p class="para">
                 Descubra o inovador 'Idea Generation App', um protótipo interativo disponível no Figma. Esse aplicativo ajuda a desencadear a criatividade e a eficiência na geração de ideias. 
               </p>
-              <a href="https://www.figma.com/proto/3KL1UlmZlfU7hLKUG6r3nO/Carolina-Silvestre-Perdig%C3%A3o's-team-library?type=design&node-id=411-720&t=SLmIEEuoPIqsn9Oa-1&scaling=min-zoom&page-id=0%3A1&starting-point-node-id=411%3A720" target="_blank" rel="noopener noreferrer"><button class="btn">Read more</button></a>
+              <a href="https://www.figma.com/proto/3KL1UlmZlfU7hLKUG6r3nO/Carolina-Silvestre-Perdig%C3%A3o's-team-library?type=design&node-id=411-720&t=pST6CvXF1qzXRdFT-1&scaling=min-zoom&page-id=0%3A1&starting-point-node-id=411%3A720&mode=design" target="_blank" rel="noopener noreferrer"><button class="btn">Click here to check the prototype</button></a>
             </div>
           </div>
         </div>
