--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <!--about content-->
             
                 <div class="about-header">
-                    About <span class="color">Me</span>
+                    About <span class="color">me</span>
                     <span class ="header-caption">Get to Know <span class="color"> me.</span></span>
                 </div>
                 <div class="about-main">
@@ -191,13 +191,14 @@
             <!--about description-->
                <span class="about-first-line">
                     I'm 
-                    <span class="color">Carolina.</span>
+                    <span class="color">Carolina</span>
                      :) </span>
                      <br>
-               <span class="about-second-line"> Here you can check a little my profile based on the DISC test, the result is a "Creative Profile", you can check on the PDF my behavior % and graphics related.</span>
+               <span class="about-second-line">Come check a little about me, my DISC profile, Educational Background and Experiences, all in one place.</span>
                <div class="cv">
-                <a href="images/pdf/Profile Test PT.pdf" target="_blank" rel="noopener noreferrer"><button>Read PDF: <span class="colors">PT</span></button></a>
-                <a href="images/pdf/Profile Test ENG.pdf" target="_blank" rel="noopener noreferrer"><button>Read PDF: <span class="colors">ENG</span></button></a>
+                <a href="about.html" target="_blank" rel="noopener noreferrer"><button >Read more <span class="colors"></span></button></a>
+                <a href="https://www.linkedin.com/in/carolina-perdig%C3%A3o/" target="_blank" rel="noopener noreferrer"><button style="margin-left: 14px;">Linkedin<span class="colors"></span></button></a>
+                
             </div>
             </div>
             <!--about picture-->
