--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <div class="firstline"><span class="color"><img src="images/whitesignature6.png"></span></div>
                 <div class="secondline">
                 I'm 
-            <span class="txt-rotate color" data-period="1200"data-rotate='[ " innovative.", " creative.", " a scietist." ]'></span>
+            <span class="txt-rotate color" data-period="1200"data-rotate='[ " Python developer.", " creative.", " a researcher." ]'></span>
             <span class="slash">|</span>
         </div>
         
@@ -136,11 +136,13 @@
 
 
         <div class="containercard2">
-            <div class="card2">
+            <a href="python_codes.html">
+            <div class="card2" >
                 <div class="card-content">
-                <p class="card-title">Welcome to the Nexus of Innovation.
-                </p><p class="card-para">Dive into a realm where science and creativity merge. Here, every project is a journey, and every solution is a masterpiece.</p>
+                <p class="card-title">Welcome to my Python Universe.
+                </p><p class="card-para">Here you can check my daily Python Training.</p>
                 </div>
+            </a>
             </div>
         </div>
           
