easy to hard python training examples added

--- a/python_codes.html
+++ b/python_codes.html
@@ -88,74 +88,40 @@
      <div class="blogs">
          <a href="#">
          <div class="img">
-            <img src="#" alt="blog-one">
-            <div class="blog-date">...</div>
+            <img src="images/easy.jpg" alt="blog-one">
+            <div class="blog-date">*-*</div>
          </div>
          <div class="blog-text">
             <a href="p1_pycode.html">
              <h3>Easy Level</h3>
-             <p></p>
+             <p> Already available, click to check it.</p>
          </div></a>
      </div>      
      <div class="blogs">
-        <a href="https://www.linkedin.com/pulse/o-essencial-para-computa%25C3%25A7%25C3%25A3o-qu%25C3%25A2ntica-n%25C3%25BAmeros-s%25C3%25B3-que-carolina-pafaf/?trackingId=AP3FH0VIQiucMs0kLEbfww%3D%3D" target="_blank" rel="noopener noreferrer">
+        <a href="#" target="_blank" rel="noopener noreferrer">
         <div class="img">
-            <img src="#" alt="blog-two">
-            <div class="blog-date">PT-BR</div>
+            <img src="images/medium.jpg" alt="blog-two">
+            <div class="blog-date">o_o</div>
         </div>
         <div class="blog-text">
-            <h3>Project 2</h3>
+            <h3>Medium</h3>
             <p>Soon.                
             </p>
         </div></a>
     </div>      
     <div class="blogs">
-        <a href="https://www.linkedin.com/pulse/al%25C3%25A9m-dos-n%25C3%25BAmeros-surpreendente-influ%25C3%25AAncia-do-big-data-carolina-19v1f/?trackingId=ACftFwaIRiKJ50snheVB7g%3D%3D" target="_blank" rel="noopener noreferrer">
+        <a href="#" target="_blank" rel="noopener noreferrer">
         <div class="img">
-            <img src="#" alt="blog-three">
-            <div class="blog-date">PT-BR</div>
+            <img src="images/hard.jpg" alt="blog-three">
+            <div class="blog-date">@_@</div>
         </div>
         <div class="blog-text">
-            <h3>Project 3</h3>
+            <h3>Hard</h3>
             <p>Soon.</p>
         </div></a>
     </div>
     
-    <div class="blogs">
-        <a href="https://www.linkedin.com/pulse/uma-batalha-silenciosa-mulheres-e-o-machismo-velado-carolina-yfndc/?trackingId=9DcCTuF0SbaF0VsthL1cMw%3D%3D" target="_blank" rel="noopener noreferrer">
-        <div class="img">
-            <img src="#" alt="blog-four">
-            <div class="blog-date">PT-BR</div>
-        </div>
-        <div class="blog-text">
-            <h3>Project 4</h3>
-            <p>Soon.</p>
-        </div></a>
-    </div>  
 
-    <div class="blogs">
-        <a href="https://www.linkedin.com/pulse/uma-batalha-silenciosa-mulheres-e-o-machismo-velado-carolina-yfndc/?trackingId=9DcCTuF0SbaF0VsthL1cMw%3D%3D" target="_blank" rel="noopener noreferrer">
-        <div class="img">
-            <img src="#" alt="blog-four">
-            <div class="blog-date">PT-BR</div>
-        </div>
-        <div class="blog-text">
-            <h3>Project 5</h3>
-            <p>Soon.</p>
-        </div></a>
-    </div>  
-
-    <div class="blogs">
-        <a href="https://www.linkedin.com/pulse/uma-batalha-silenciosa-mulheres-e-o-machismo-velado-carolina-yfndc/?trackingId=9DcCTuF0SbaF0VsthL1cMw%3D%3D" target="_blank" rel="noopener noreferrer">
-        <div class="img">
-            <img src="#" alt="blog-four">
-            <div class="blog-date">PT-BR</div>
-        </div>
-        <div class="blog-text">
-            <h3>Project 6</h3>
-            <p>Soon.</p>
-        </div></a>
-    </div>  
        <!--END OF ARTICLES-->
 
 </div>
