Instructional Design added

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <img src="images/instagram.png" alt="service-two">
                         </div>
                         <div class="service-description">
-                            <h2>Creative UI/UX</h2>
+                            <h2>Creative UI/UX and Instructional Design</h2>
                             <p>Interfaces that Captivate and Connect, blending aesthetics with functionality.</p>
                         </div>
                         </a>
