--- a/python_codes.html
+++ b/python_codes.html
@@ -92,32 +92,33 @@
             <div class="blog-date">*-*</div>
          </div>
          <div class="blog-text">
-            <a href="p1_pycode.html">
+            <a href="p1_pycode_easy.html">
              <h3>Easy Level</h3>
              <p> Already available, click to check it.</p>
          </div></a>
      </div>      
+
      <div class="blogs">
         <a href="#" target="_blank" rel="noopener noreferrer">
         <div class="img">
             <img src="images/medium.jpg" alt="blog-two">
             <div class="blog-date">o_o</div>
         </div>
-        <div class="blog-text">
-            <h3>Medium</h3>
-            <p>Soon.                
-            </p>
+        <a href="p1_pycode_easy.html">
+            <h3>Easy Level</h3>
+            <p> Already available, click to check it.</p>
         </div></a>
     </div>      
+
     <div class="blogs">
         <a href="#" target="_blank" rel="noopener noreferrer">
         <div class="img">
             <img src="images/hard.jpg" alt="blog-three">
             <div class="blog-date">@_@</div>
         </div>
-        <div class="blog-text">
-            <h3>Hard</h3>
-            <p>Soon.</p>
+        <a href="p1_pycode_easy.html">
+            <h3>Easy Level</h3>
+            <p> Already available, click to check it.</p>
         </div></a>
     </div>
     
