--- a/uiux.html
+++ b/uiux.html
@@ -64,6 +64,16 @@
 
         <div class="cards">
 
+          <div class="card">
+            <div class="content">
+              <p class="heading">Instructional Design: The Brain for a Leader
+              </p><p class="para">
+                A beatiful presentation about Neural Netwroks (biological and matematcally), the brain and the biases.
+              </p>
+              <a href="uiuxBrainforLeader.html" target="_blank" rel="noopener noreferrer"><button class="btn">Click here to see more.</button></a>
+            </div>
+          </div>
+
             
           <div class="card">
             <div class="content">
